--- a/package.json
+++ b/package.json
@@ -9,9 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
+    "convert-excel-to-json": "^1.7.0",
+    "cookie": "^0.4.0",
+    "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
+    "dateformat": "^5.0.1",
+    "enchant-puppeteer": "^0.0.7",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.1",
     "next": "11.1.2",
+    "os-utils": "^0.0.14",
+    "papaparse": "^5.3.1",
+    "puppeteer": "^10.4.0",
+    "puppeteer-extra-plugin-adblocker": "^2.12.0",
+    "puppeteer-extra-plugin-proxy": "^1.0.2",
+    "puppeteer-extra-plugin-recaptcha": "^3.5.0",
+    "puppeteer-extra-plugin-stealth": "^2.8.1",
+    "random-email": "^1.0.3",
+    "random-name": "^0.1.2",
+    "random-useragent": "^0.5.0",
+    "rc-upload": "^4.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-fileupload": "^2.4.0",
+    "react-google-charts": "^3.0.15",
+    "txtgen": "^2.2.8",
+    "user-agents": "^1.0.785"
   },
   "devDependencies": {
     "eslint": "7.32.0",
