--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "os-utils": "^0.0.14",
     "papaparse": "^5.3.1",
     "puppeteer": "^10.4.0",
+    "puppeteer-extra": "^3.2.2",
     "puppeteer-extra-plugin-adblocker": "^2.12.0",
     "puppeteer-extra-plugin-proxy": "^1.0.2",
     "puppeteer-extra-plugin-recaptcha": "^3.5.0",
