--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 80",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 80",
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "axios": "^0.21.4",
+    "cheerio": "^1.0.0-rc.10",
     "convert-excel-to-json": "^1.7.0",
     "cookie": "^0.4.0",
     "cors": "^2.8.5",
@@ -19,6 +23,7 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.1",
     "next": "11.1.2",
+    "node-html-parser": "^1.4.9",
     "os-utils": "^0.0.14",
     "papaparse": "^5.3.1",
     "puppeteer": "^10.4.0",
