--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "dateformat": "^5.0.1",
+    "dotenv": "^10.0.0",
     "enchant-puppeteer": "^0.0.7",
     "express": "^4.17.1",
     "mongodb": "^4.1.1",
