--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "puppeteer": "^10.4.0",
     "puppeteer-extra": "^3.2.2",
     "puppeteer-extra-plugin-adblocker": "^2.12.0",
+    "puppeteer-extra-plugin-block-resources": "^2.3.0",
     "puppeteer-extra-plugin-proxy": "^1.0.2",
     "puppeteer-extra-plugin-recaptcha": "^3.5.0",
     "puppeteer-extra-plugin-stealth": "^2.8.1",
